--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>Меня зовут Илона и я из Петербурга</p>
         </div>
         <div class="avatar">
-            <img class="avatar_img" src="/img/avatar.jpg" alt="Avatar">
+            <img class="avatar_img" src="./img/avatar.jpg" alt="Avatar">
         </div>
     </div>
 
