--- a/index.html
+++ b/index.html
@@ -4,60 +4,74 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Резюме Илоны</title>
+    <link rel="shortcut icon" href="./img/icon.ico" type="image/x-icon">
     <link href="./css/style.css" rel="stylesheet">
     <link href="./css/normalize.css" rel="stylesheet">
 
 </head>
 
 <body class="body">
-    <div class="head">
-        <div class="text">
+
+    <div class="head" id="head">
+        <div class="head_item head_item_text">
             <h1>Привет! </h1>
-            <p>Меня зовут Илона и я из Петербурга</p>
+            <p>👩Меня зовут Илона и я из Петербурга.
+                <br>А ты?</br>
+            </p>
         </div>
-        <div class="avatar">
+        <div class="head_item head_item_img">
             <img class="avatar_img" src="./img/avatar.jpg" alt="Avatar">
         </div>
+        <div class="head_item head_item_text">
+            <p>🎓Certified Kanban Systems Design (KMP1)</p>
+            <p>🎓ICAgile Certified Professional - Agile Team Facilitation</p>
+        </div>
+
+
     </div>
 
-
+    <div class="skills_item">
+        <h3>Навыки</h3>
+    </div>
 
     <div class="skills">
-        <h3>Опыт ведения</h3>
+        <div class="skills_item">
+            <p><b>Опыт ведения</b>
+                <li>gamedev, mobile и hr проектов - 2 года</li>
+                <li>IT и event проектов - 5 лет</li>
+                <li>telecom проектов - 3,5 года</li>
+            </p>
+        </div>
 
-        <li>gamedev, mobile и hr проектов - 2 года</li>
-        <li>IT и event проектов - 5 лет</li>
-        <li>telecom проектов - 3,5 года</li>
+        <div class="skills_item">
+            <p><b>Проектное управление:</b></p>
+            <li>Знание методологий ведения проектов (Agile, Scrum, Kanban)</li>
+            <li>Ведение проекта, сроки, риски, ресурсы</li>
+            <li>Планирование процесса разработки продукта, ведение бэклога</li>
+            <li>Бюджетирование проекта</li>
+            <li>Организация и оптимизация БП</li>
+            <li>Организация запуска продукта</li>
+        </div>
+        <div class="skills_item">
+            <p><b>Управление продуктом:</b></p>
 
-        <p>Certified Kanban Systems Design (KMP1)</p>
-        <p>ICAgile Certified Professional - Agile Team Facilitation</p>
+            <li>Стратегическое планирование</li>
+            <li>Анализ продуктовых метрик и сценариев использования</li>
+            <li>Выявление потребностей конечного пользователя, расстановка приоритетов</li>
+            <li>Организация тестирования продукта (в том числе UX) и обратной связи от пользователей, A/B тестирование
+            </li>
+            <li>Понимание юзабилити (и любовь)</li>
+            <li>Ведение roadmap</li>
+            <li>Анализ конкурентов</li>
+        </div>
+        <div class="skills_item">
+            <p><b>Управление командой:</b></p>
 
-        <h3>Навыки</h3>
-
-        <p><b>Проектное управление:</b></p>
-        <li>Знание методологий ведения проектов (Agile, Scrum, Kanban)</li>
-        <li>Ведение проекта, сроки, риски, ресурсы</li>
-        <li>Планирование процесса разработки продукта, ведение бэклога</li>
-        <li>Бюджетирование проекта</li>
-        <li>Организация и оптимизация БП</li>
-        <li>Организация запуска продукта</li>
-
-        <p><b>Управление продуктом:</b></p>
-
-        <li>Стратегическое планирование</li>
-        <li>Анализ продуктовых метрик и сценариев использования</li>
-        <li>Выявление потребностей конечного пользователя, расстановка приоритетов</li>
-        <li>Организация тестирования продукта (в том числе UX) и обратной связи от пользователей, A/B тестирование</li>
-        <li>Понимание юзабилити (и любовь)</li>
-        <li>Ведение roadmap</li>
-        <li>Анализ конкурентов</li>
-
-        <p><b>Управление командой:</b></p>
-
-        <li>Мотивация команды</li>
-        <li>Решение спорных и конфликтных ситуаций в коллективе</li>
-        <li>Организация HR культуры и поиска крутых ребят в команду</li>
-        <li>Формирование команды</li>
+            <li>Мотивация команды</li>
+            <li>Решение спорных и конфликтных ситуаций в коллективе</li>
+            <li>Организация HR культуры и поиска крутых ребят в команду</li>
+            <li>Формирование команды</li>
+        </div>
 
     </div>
 
