--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <img class="avatar_img" src="./img/avatar.jpg" alt="Avatar">
         </div>
         <div class="head_item head_item_text">
+            <p>📌Больше 5 лет управления проектами и продуктами: геймдев, веб, мобайл, телекоммуникации, ивенты</p>
             <p>🎓Certified Kanban Systems Design (KMP1)</p>
             <p>🎓ICAgile Certified Professional - Agile Team Facilitation</p>
         </div>
@@ -31,20 +32,11 @@
     </div>
 
     <div class="skills_item">
-        <h3>Навыки</h3>
     </div>
 
     <div class="skills">
         <div class="skills_item">
-            <p><b>Опыт ведения</b>
-                <li>gamedev, mobile и hr проектов - 2 года</li>
-                <li>IT и event проектов - 5 лет</li>
-                <li>telecom проектов - 3,5 года</li>
-            </p>
-        </div>
-
-        <div class="skills_item">
-            <p><b>Проектное управление:</b></p>
+            <p><b>✅Про проекты ✅</b></p>
             <li>Знание методологий ведения проектов (Agile, Scrum, Kanban)</li>
             <li>Ведение проекта, сроки, риски, ресурсы</li>
             <li>Планирование процесса разработки продукта, ведение бэклога</li>
@@ -53,7 +45,7 @@
             <li>Организация запуска продукта</li>
         </div>
         <div class="skills_item">
-            <p><b>Управление продуктом:</b></p>
+            <p><b>🛒Про продукты 🛒</b></p>
 
             <li>Стратегическое планирование</li>
             <li>Анализ продуктовых метрик и сценариев использования</li>
@@ -65,7 +57,7 @@
             <li>Анализ конкурентов</li>
         </div>
         <div class="skills_item">
-            <p><b>Управление командой:</b></p>
+            <p><b>🍺Про команду 🍺</b></p>
 
             <li>Мотивация команды</li>
             <li>Решение спорных и конфликтных ситуаций в коллективе</li>
